[project]
name = "crawl-agent"
version = "0.1.0"
description = ""
authors = [
    { name = "gaozhe", email = "fovegage@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-socketio (>=5.13.0,<6.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
